--- a/polyfill/01.md
+++ b/polyfill/01.md
@@ -65,4 +65,18 @@
   }
   ```
 
-4. call 方法实现
+4. bind 实现
+
+5. call 实现
+
+6. apply 实现
+
+7. deep clone 实现
+
+8. es5 经典继承（寄生组合式继承）
+
+9. instanceOf 模拟
+
+10. 异步并发数限制
+
+11. 
