--- a/polyfill/01.md
+++ b/polyfill/01.md
@@ -2,81 +2,127 @@
 
 1. new 操作符号
 
-  ```javascript
-  function iNew(Constructor) {
-    const object = {};
-    // const params = Array.prototype.slice.call(arguments, 1)
-    const params = [].slice.call(arguments, 1);
+```javascript
+function iNew(Constructor) {
+  const object = {};
+  // const params = Array.prototype.slice.call(arguments, 1)
+  const params = [].slice.call(arguments, 1);
 
-    // object.__proto__ = Constructor.prototype || {}
-    Object.setPrototypeOf(object, Constructor.prototype || {});
-    const res = Constructor.apply(object, params);
+  // object.__proto__ = Constructor.prototype || {}
+  Object.setPrototypeOf(object, Constructor.prototype || {});
+  const res = Constructor.apply(object, params);
 
-    // 基本类型或者 null 返回 object; 否则返回 new 函数返回值
-    const isValidResult =
-      typeof res === 'function' || (typeof res === 'object' && res != null);
+  // 基本类型或者 null 返回 object; 否则返回 new 函数返回值
+  const isValidResult =
+    typeof res === 'function' || (typeof res === 'object' && res != null);
 
-    return isValidResult ? res : object;
-  }
-  ```
+  return isValidResult ? res : object;
+}
+```
 
 2. 防抖 debounce 简易版
 
-  ```javascript
-  function debounce(fn, ms) {
-    let timer = null;
+```javascript
+function debounce(fn, ms) {
+  let timer = null;
 
-    return function (...args) {
-      if (timer) {
-        window.clearTimeout(timer);
-      }
-      timer = window.setTimeout(() => {
-        // 如果不是箭头函数，则需要调整 this 指向
-        fn.apply(this, args);
-      }, ms);
-    };
-  }
-  ```
+  return function (...args) {
+    if (timer) {
+      window.clearTimeout(timer);
+    }
+    timer = window.setTimeout(() => {
+      // 如果不是箭头函数，则需要调整 this 指向
+      fn.apply(this, args);
+    }, ms);
+  };
+}
+```
 
 3. 节流 throttle 简易版
 
-  ```javascript
-  function throttle(fn, ms) {
-    let timer = null;
-    let lastTime = 0
+```javascript
+function throttle(fn, ms) {
+  let timer = null;
+  let lastTime = 0;
 
-    return function (...args) {
-      const diff = Date.now() - lastTime;
+  return function (...args) {
+    const diff = Date.now() - lastTime;
 
-      // 执行：首次 or 到达时间间隔
-      if (!lastTime && diff >= ms) {
-        lastTime = Date.now();
-        fn.apply(this, args);
-      } else {
-        if (timer) {
-          window.clearTimeout(timer);
-        }
-
-        timer = window.setTimeout(() => {
-          fn.apply(this, args);
-        }, ms - diff);
+    // 执行：首次 or 到达时间间隔
+    if (!lastTime && diff >= ms) {
+      lastTime = Date.now();
+      fn.apply(this, args);
+    } else {
+      if (timer) {
+        window.clearTimeout(timer);
       }
-    };
-  }
-  ```
+
+      timer = window.setTimeout(() => {
+        fn.apply(this, args);
+      }, ms - diff);
+    }
+  };
+}
+```
 
 4. bind 实现
 
 5. call 实现
 
+  ```javascript
+  function call(context, ...args) {
+    context = context || window // global in nodejs
+    context.method = this
+
+    const res = context.method(...args)
+    delete context.method
+
+    return res
+  }
+  Function.prototype.iCall = apply
+  ```
+
 6. apply 实现
+
+  ```javascript
+  function apply(context, args) {
+    context = context || window // global in nodejs
+    context.method = this
+
+    const res = context.method(...args)
+    delete context.method
+
+    return res
+  }
+  Function.prototype.iApply = apply
+  ```
+
 
 7. deep clone 实现
 
 8. es5 经典继承（寄生组合式继承）
 
+  ```javascript
+  // Object.create polyfill
+  function create(object) {
+    function f() {}
+    f.prototype = object;
+    return new f();
+  }
+
+  function Child(...args) {
+    Parent.call(this, ...args);
+    this.someProp = 'prop';
+  }
+
+  Child.prototype = create(Parent.prototype);
+  Child.prototype.Constructor = Child;
+
+  Child.prototype.someFunc = function () {};
+  ```
+
 9. instanceOf 模拟
 
 10. 异步并发数限制
 
-11. 
+11.
