--- a/polyfill/01.md
+++ b/polyfill/01.md
@@ -123,6 +123,33 @@ function throttle(fn, ms) {
 
 9. instanceOf 模拟
 
+  ```javascript
+  function instanceOf(left, right) {
+    if (typeof left !== 'object' || left === null) return false
+
+    let proto = Object.getPrototypeOf(left)
+
+    while (true) {
+      if (proto === null) return false
+      if (proto === right.prototype)  return true
+      proto = Object.getPrototypeOf(proto)
+    }
+
+  }
+  ```
+
 10. 异步并发数限制
 
-11.
+11. Object.is 实现
+
+  ```javascript
+  function is (x, y) {
+    if (x === y) {
+      // -0 和 +0 应该返回false
+      return x !== 0 || y !== 0 || 1/x === 1/y
+    } else {
+      // NaN 跟自身不相等
+      return x !== x && y !== y
+    }
+  }
+  ```
