--- a/design pattern/01.md
+++ b/design pattern/01.md
@@ -3,7 +3,15 @@
 1. 发布订阅者模式
 
 
-
 2. 观察者模式
 
   `注：两种模式区别，发布订阅者模式，发布者和订阅者互相不知道不存在，双方通过管理器（比如 EventEmitter）来进行发布和订阅操作；观察者模式，观察者和被观察者耦合，需要手动注册到被观察者的通知列表`
+
+3. 代理模式
+
+4. 门面模式
+
+5. 装饰模式
+
+6. 策略模式
+
