发布订阅者模式和观察者模式

--- a/design pattern/01.md
+++ b/design pattern/01.md
@@ -2,10 +2,59 @@
 
 1. 发布订阅者模式
 
+  ```javascript
+  class EventHub {
+    constructor() {
+      this.subscribers = {}
+    }
 
-2. 观察者模式
+    subscribe(eventName, callback) {
+      if (!this.subscribers[eventName]) {
+        this.subscribers[eventName] = { callback: [] }
+      }
+      const { callbacks } = this.subscribers[eventName]
+      callbasks.push(callback) // 看情况去重
 
-  `注：两种模式区别，发布订阅者模式，发布者和订阅者互相不知道不存在，双方通过管理器（比如 EventEmitter）来进行发布和订阅操作；观察者模式，观察者和被观察者耦合，需要手动注册到被观察者的通知列表`
+      // unsubscribe
+      return () => {
+        const index = callbacks.findIndex(i => i === callback)
+        if (index !== -1) callbacks.splice(index, 1)
+      }
+    }
+
+    publish(eventName, ...args) {
+      const { callbacks = [] } = this.subscribers[eventName] || {}
+      callbacks.forEach(cb => cb(...args))
+    }
+
+  }
+
+  ```
+
+2. 观察者模式：观察者和被观察者耦合在一起，观察者需要手动注册到被观察者身上，关系比较直接
+
+  ```javascript
+  class Subject {
+    constructor() {
+      this.observers = []
+    }
+
+    add(observer) {
+      this.observers.push(observer) // 看情况去重
+    } 
+
+    notify(...params) {
+      this.observers.forEach(observer => observer.update(...params))
+    }
+  }
+  
+  class Observer {
+    // 只需要实现此接口即可
+    notify(...args) {
+      console.log(args)
+    }
+  }
+  ```
 
 3. 代理模式
 
