发布订阅者模式简单解释

--- a/design pattern/01.md
+++ b/design pattern/01.md
@@ -1,6 +1,6 @@
 ### Design Pattern
 
-1. 发布订阅者模式
+1. 发布订阅者模式: 不同于观察者模式，订阅者和被订阅者通过中间媒介管理，彼此不依赖，也即发布者发布事件时，不关心谁收到事件；订阅者订阅事件时，不关心发布者是谁
 
   ```javascript
   class EventHub {
