迭代器简单介绍

--- a/javascript/01.md
+++ b/javascript/01.md
@@ -6,3 +6,29 @@
 4. let 变量声明前使用，会进入暂时性死区，报错
 5. var 不存在块级作用域，会将声明提升至最上面，且与function声明同一变量时，不存在let/const的声明重复报错，会忽略第一次之后的声明，直接修改变量
 6. 直接声明 let a = 123 则 window.a 为 undefined，但是 var a = 123 会导致 window.a = 123 存在
+
+### 生成器和迭代器
+
+1. 迭代器：即实现了 next() 接口的对象，返回值结构为：`{ done: boolean, value: any }`，其中 done 为 true 代表迭代器迭代结束
+2. 生成器，即生成迭代器的函数，语法为：`function *fn() {}`，见下例：
+    
+    ```javascript
+    function *otherGen() {
+      yield 'a'
+      yield 'b'
+      return 'c' // 迭代器执行到 done 为 true 时候，value 为此处返回值 c
+    }
+    function *gen() { 
+      yield 1 
+      yield *otherGen() // 这里的 yield * 语法表示展开内层迭代器 -- 注意，otherGen() 迭代器 return 值会被忽略
+      yield 2
+      return 3
+    }
+    const ite = gen()
+    ite.next() // done: false, value: 1
+    ite.next() // done: false, value: 'a'
+    ite.next() // done: false, value: 'b'
+    ite.next() // done: false, value: 2
+    ite.next() // done: true, value: 3
+    ite.next() // done: true, value: undefined 
+    ```
